

Name: Segue ChangeLog


v. 1.3.0 (the future)
----------------------------------------------------
		
	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
		
		
	* New feature: Added a configuration checking function and some more helpful error messages so that installing and configuring Segue is more straight forward. (Adam Franco)
		
	* Bug Fix: #856465 Have added notes and help to themes UI indicating the Popup Window blocker software should be disabled for Segue. (Alex Chapin)
		
	* Bug Fix: Improved navigation header display. Fixed style of navigation header in bevelbox theme. (Alex Chapin)
		
	* Change: Changed side sections navigational arrangement (see: theme settings) such that links to pages of the current section appear in an indented list below section name in left navigation. (Alex Chapin)				
		
	* Bug Fix: Segue now checks that it can write to a site directory before attempting to copy media to it and prints out an informative message if it can't instead of failing with confusing errors. (Adam Franco)
		
	* Bug Fix: #879877 Removed repeating titles for stories in the sitemap. (Adam Franco)
		
	* New feature: #1029412 When copying sites or other parts of a site, discussion posts can now be coppied as well. (Adam Franco)
		
	* New feature: When viewing the logs screen, old logs are cleaned out as per a configurable number of days. (Adam Franco)
		
	* Bug Fix: Sites associated with a class and class sites now can properly add the class as an editor. (Adam Franco)
		
	* Bug Fix: Segue now prints a nice error instructing the user to update thier links if a bad link tries to get a non-existant section or page and creates a corrupted section or page object. (Adam Franco)
		