@@ -10,12 +10,17 @@
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
 		
+		<li/> Bug Fix:
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1036562&amp;group_id=82171&amp;atid=565234">
+        			#1036562</a> 
+			CopySite now copies all media, not just those referenced by stories.
+		 (<i>Adam Franco</i>)
 		<li/> New feature:  
 			Added a configuration checking function and some more helpful error
 			messages so that installing and configuring Segue is more straight forward.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=856465&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=856465&amp;group_id=82171&amp;atid=565234">
         			#856465</a> 
 			Have added notes and help to themes UI indicating the Popup Window blocker
 			software should be disabled for Segue.
@@ -37,11 +42,11 @@
 			instead of failing with confusing errors.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=879877&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=879877&amp;group_id=82171&amp;atid=565234">
         			#879877</a> 
 			Removed repeating titles for stories in the sitemap.
 		 (<i>Adam Franco</i>)
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1029412&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1029412&amp;group_id=82171&amp;atid=565237">
         			#1029412</a> 
 			When copying sites or other parts of a site, discussion posts can
 			now be coppied as well.
@@ -80,7 +85,7 @@
 			Lising&quot; to &quot;Public Sites&quot;.  Removed &quot;links&quot; header and removed header
 			formatting from help link.  Also added text to public site listing.
 		 (<i>Alex Chapin</i>)
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1036499&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1036499&amp;group_id=82171&amp;atid=565237">
         			#1036499</a> 
 			Added a config option to include registration link below login
 			fields when there has been no authentication.  Also added config option
@@ -125,7 +130,7 @@
 		<li/> Change:  
 			Changed Active-X editor so that it links to the Media Library for images.
 		 (<i>Alex Chapin</i>)		
-		<li/> Change: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=865093&amp;group_id=82171&amp;atid=565234">
+		<li/> Change: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=865093&amp;group_id=82171&amp;atid=565234">
         			#865093</a> 
 			View and activate permission settings on template sites now affect
 			who/when they appear for users creating sites.
@@ -211,11 +216,11 @@
 			Fixed bug in media library (filebrowser.php) that prevented getting custom
 			upload limits when called from add content block UI (add_story_form_1_item.inc)
 		 (<i>Alex Chapin</i>)
-		<li/> Change: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=982246&amp;group_id=82171&amp;atid=565237">
+		<li/> Change: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=982246&amp;group_id=82171&amp;atid=565237">
         			#982246</a> 
 			Link type pages no longer open in new window.
 		 (<i>Alex Chapin</i>)
-		<li/> Change: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=982246&amp;group_id=82171&amp;atid=565237">
+		<li/> Change: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=982246&amp;group_id=82171&amp;atid=565237">
         			#982246</a> 
 			Link type content blocks no longer print out urls greater than 70 characters
 			but instead truncate their display to avoid stretching their enclosing tables.
@@ -247,20 +252,19 @@
 			regardless of whether or not they have posted to discussions/assessments on the 
 			class site.
 		 (<i>Alex Chapin</i>)
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=956123&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=956123&amp;group_id=82171&amp;atid=565237">
         			#956123</a> 
 			Added visitor and guest usertypes.  Visitors can participate in public
 			discussions and can be assigned permissions.  Visitors cannot view 
-			institute-only content and are not given a slot for a personal site.
-			Guests can participate in all discussions/assessments accessible to 
-			institute users and can view institute-only content.  In addition, guests
-			are given a slot for a personal site.
+			institute-only content. Guests can participate in all discussions/assessments 
+			accessible to institute users and can view institute-only content.  Neither
+			visitors nor guests are given a slot for a personal site.
 		 (<i>Alex Chapin</i>)
 		<li/> Change:  
 			Changed passwd.php to handle 1. changing passwords of users authenticated via
 			Segue's db 2. registering new visitor type users 3. Log in of existing users.
 		 (<i>Alex Chapin</i>)
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=957605&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=957605&amp;group_id=82171&amp;atid=565237">
         			#957605</a> 
 			Added user registration UI that appears in public discussions when posts
 			are made without authentication.  User registration UI requires unauthenticated
@@ -339,7 +343,7 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			UI now returns users back to this location (instead of page)
 		 (<i>Alex Chapin</i>)	
 	</ul><br/><h2>Version 1.2.0</h2><h3>2004-06-10</h3><ul>
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=957602&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=957602&amp;group_id=82171&amp;atid=565237">
         			#957602</a> 
 			Added HTMLarea version 3.0 to UI for adding content, editing site headers
 			and footers and discussion posts.  2 implementations of the editor are
@@ -352,7 +356,7 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			or Mac Internet Explorer.  For these browsers, a standard textarea is
 			available.			
 		 (<i>Alex Chapin</i>)
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=957602&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=957602&amp;group_id=82171&amp;atid=565237">
         			#957602</a> 
 			Added UI for discussion/assessment participation summary and moderation.  
 			This UI gives site owners a list of all the participants in a given 
@@ -418,7 +422,7 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			displayed to other users (e.g. author name, post content)
 			and what post information is available to the site owner. 
 		 (<i>Alex Chapin</i>)	
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=888585&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=888585&amp;group_id=82171&amp;atid=565237">
         			#888585</a> 
 			Added file upload UI to discussion/assessment post form.  This
 			feature will allow those who post to a discussion to attach a file.
@@ -429,13 +433,13 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			This new functionality will	allow the discussion/assessment UI to
 			function as an assignment/assessment dropbox.
 		 (<i>Alex Chapin</i>)
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=888588&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=888588&amp;group_id=82171&amp;atid=565237">
         			#888588</a> 
 			Added option to rate discussion/assessment posts.  This feature 
 			will allow site owners rate the quality of posts.  In assessment
 			mode this rating can be used as a grade.
 		 (<i>Alex Chapin</i>)
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=888588&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=888588&amp;group_id=82171&amp;atid=565237">
         			#888588</a> 
 			Added option to show or hide authors of discussion/assessment posts.
  			This feature will allow site owners to create publicly anonymous 
@@ -445,7 +449,7 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			allow site owners to let all users see then results of an assessment
 			without revealing identity of assessment post authors.
 		 (<i>Alex Chapin</i>)
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=888588&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=888588&amp;group_id=82171&amp;atid=565237">
         			#888588</a> 
 			Added option to show or hide discussion/assessment posts.  This
 			feature will allow site owners to use discussions as assessments.
@@ -485,13 +489,13 @@ Mac Safari. Removed browser specific code from filebrowser.php
 		 (<i>Adam Franco</i>)
 	</ul><br/><h2>Version 1.0.6</h2><h3>2003-12-29</h3><ul>
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=750109&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=750109&amp;group_id=82171&amp;atid=565234">
         			#750109</a> 
 			Now doesn't attempt to perform operations on nonexistant LDAP
 			results.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=865065&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=865065&amp;group_id=82171&amp;atid=565234">
         			#865065</a> 
 			Now checks that the destination name is not the same as the source
 			name and is also not an empty string.
@@ -508,17 +512,17 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			results.
 		 (<i>Alex Chapin</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=853466&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=853466&amp;group_id=82171&amp;atid=565234">
         			#853466</a> 
 			Classes now show up if the user is an admin.
 		 (<i>Alex Chapin</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=853497&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=853497&amp;group_id=82171&amp;atid=565234">
         			#853497</a> 
 			Removed link to assessments on default.inc.php
 		 (<i>Alex Chapin</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=853501&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=853501&amp;group_id=82171&amp;atid=565234">
         			#853501</a> 
 			Fixed a bug in add/edit classes UI so that classes existing classes 
 			can now be edit.
@@ -571,35 +575,35 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			searching and pagination.
 		 (<i>Alex Chapin</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=776452&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=776452&amp;group_id=82171&amp;atid=565234">
         			#776452</a> 
 			Anonymous/Unauthenticated discussions are now working.
 		 (<i>Gabe Schine</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=809335&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=809335&amp;group_id=82171&amp;atid=565234">
         			#809335</a> 
 			Class groups not listed from members
 		 (<i>Adam Franco</i>)
-		<li/> Change: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=804005&amp;group_id=82171&amp;atid=565237">
+		<li/> Change: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=804005&amp;group_id=82171&amp;atid=565237">
         			#804005</a> 
 			Editors of sections can now enable discussions for that section and
 			select which (of the already availible editors) can post to it.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=803899&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=803899&amp;group_id=82171&amp;atid=565234">
         			#803899</a> 
 			Co-Teaching profs now don't see site creation, grouping, or editing
 			links if they are not the owner for a site. They see editing links
 			as apropriate if they are editors.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=803894&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=803894&amp;group_id=82171&amp;atid=565234">
         			#803894</a> 
 			User's Full Names containing apostrophes now don't throw errors when
 			adding to the user table.
 		 (<i>Adam Franco</i>)
 	</ul><br/><h2>Version 1.0.2</h2><h3>2003-09-08</h3><ul>
-		<li/> Change: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=777065&amp;group_id=82171&amp;atid=565237">
+		<li/> Change: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=777065&amp;group_id=82171&amp;atid=565237">
         			#777065</a> 
 			The admin interface has been changed so that slot and their
 			properties can be changed along side the classes and users. Custom 
@@ -607,17 +611,17 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			editing the DB directly.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=802499&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=802499&amp;group_id=82171&amp;atid=565234">
         			#802499</a> 
 			Story problems with the [De]Activate dates have been fixed
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=795587&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=795587&amp;group_id=82171&amp;atid=565234">
         			#795587</a> 
 			Problems with the [De]Activate dates have been fixed
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=791954&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=791954&amp;group_id=82171&amp;atid=565234">
         			#791954</a> 
 			The Move/Copy UI now shows the sitename to differentiate between
 			similarly titled sites.
@@ -633,7 +637,7 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			library size for existing slots.
 		
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=784526&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=784526&amp;group_id=82171&amp;atid=565234">
         			#784526</a> 
 			Fixed upload of PHP files bug.
 		 (<i>Adam Franco</i>)
@@ -642,13 +646,13 @@ Mac Safari. Removed browser specific code from filebrowser.php
 			which is an INT(10), corresponding to the number of bytes of the
 			quota.
 		
-		<li/> New feature: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=777065&amp;group_id=82171&amp;atid=565237">
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=777065&amp;group_id=82171&amp;atid=565237">
         			#777065</a> 
 			Media Library quota can be adjusted on a per-site basis through the
 			slot database table. Add Slot interface upgraded too.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=771969&amp;group_id=82171&amp;atid=565234">
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=771969&amp;group_id=82171&amp;atid=565234">
         			#771969</a> 
 			Upon logout, the session, instead of being completely destroyed,
 			only unsets Segue-specific variables. The previous functionality was
