@@ -9,6 +9,8 @@ v. 1.3.0 (the future)
 	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
 		
 		
+	* Bug Fix: #1036562 CopySite now copies all media, not just those referenced by stories. (Adam Franco)
+		
 	* New feature: Added a configuration checking function and some more helpful error messages so that installing and configuring Segue is more straight forward. (Adam Franco)
 		
 	* Bug Fix: #856465 Have added notes and help to themes UI indicating the Popup Window blocker software should be disabled for Segue. (Alex Chapin)
@@ -101,7 +103,7 @@ v. 1.3.0 (the future)
 		
 	* New feature: Added student roster listing UI for class type sites. This UI allows site owners to add and remove users from their class group. In addition, class type sites will list all students in class in discussion moderation UI, regardless of whether or not they have posted to discussions/assessments on the class site. (Alex Chapin)
 		
-	* New feature: #956123 Added visitor and guest usertypes. Visitors can participate in public discussions and can be assigned permissions. Visitors cannot view institute-only content and are not given a slot for a personal site. Guests can participate in all discussions/assessments accessible to institute users and can view institute-only content. In addition, guests are given a slot for a personal site. (Alex Chapin)
+	* New feature: #956123 Added visitor and guest usertypes. Visitors can participate in public discussions and can be assigned permissions. Visitors cannot view institute-only content. Guests can participate in all discussions/assessments accessible to institute users and can view institute-only content. Neither visitors nor guests are given a slot for a personal site. (Alex Chapin)
 		
 	* Change: Changed passwd.php to handle 1. changing passwords of users authenticated via Segue's db 2. registering new visitor type users 3. Log in of existing users. (Alex Chapin)
 		
